<resources>
    <string name="app_name">AndroidLab</string>
    <string name="hello_message">Look at my GUI</string>
    <string name="ButtonText">CLICK HERE</string>
    <string name="checkboxText">Check this out!</string>
    <string name="switchText">Switch on / off</string>
    <string name="EditText">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="switchOn">The switch is now on</string>
    <string name="switchOff">The switch is now off</string>
    <string name="undo">Undo</string>
</resources>