<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button01"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView01"
        android:layout_marginTop="0dp"
        android:text="@string/ButtonText" />

    <CheckBox
        android:id="@+id/checkbox01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkboxText"
        android:layout_below="@+id/textView01"
        android:layout_toRightOf="@+id/button01"
        android:layout_alignLeft="@+id/switch01"/>

    <ImageButton
        android:id="@+id/imageButton01"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button01"
        android:layout_marginTop="0dp"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchText"
        android:layout_toRightOf="@id/imageButton01"
        android:layout_below="@+id/button01"/>

    <EditText
        android:hint="@string/EditText"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton01"/>


</RelativeLayout>